--- a/IPOHTML/index.html
+++ b/IPOHTML/index.html
@@ -1,184 +1,278 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-    <title>Blog Home - Start Bootstrap Template</title>
+	<title>Blog Home - Start Bootstrap Template</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<!-- Bootstrap core CSS -->
+	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/blog-home.css" rel="stylesheet">
+	<!-- Custom styles for this template -->
+	<link href="css/blog-home.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-		  <a class="navbar-brand" href="#"><img class="imgU" src="img/LogoU.png" height="40" width="50"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+	<!-- Navigation -->
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+		<div class="container">
+			<a class="navbar-brand" href="#"><img class="imgU" src="img/LogoU.png" height="40" width="50"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Inicio
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Inicio
                 <span class="sr-only">(current)</span>
               </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Juegos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Asignaturas</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contacto</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Juegos</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Asignaturas</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Contacto</a>
+					</li>
 
-    <!-- Page Content -->
-    <div class="container">
+					<li class="nav-item">
+						
+						<a href="#" class="nav-link" data-toggle="dropdown">
+                        <span class="glyphicon glyphicon-user"></span> 
+							<strong>Usuario</strong>
+                        <span class="glyphicon glyphicon-chevron-down"></span>
+                    	</a>
+						
+<!--
+							<ul class="dropdown-menu">
+								<li>
+									<div class="navbar-login">
+										<div class="row">
+											<div class="col-lg-4">
+												<p class="text-center">
+													<span class="glyphicon glyphicon-user icon-size"></span>
+												</p>
+											</div>
+											<div class="col-lg-8">
+												<p class="text-left"><strong>Nombre Apellido</strong></p>
+												<p class="text-left small">correoElectronico@email.com</p>
+												<p class="text-left">
+													<a href="#" class="btn btn-primary btn-block btn-sm">Actualizar Datos</a>
+												</p>
+											</div>
+										</div>
+									</div>
+								</li>
+								<li class="divider"></li>
+								<li>
+									<div class="navbar-login navbar-login-session">
+										<div class="row">
+											<div class="col-lg-12">
+												<p>
+													<a href="#" class="btn btn-danger btn-block">Cerrar Sesion</a>
+												</p>
+											</div>
+										</div>
+									</div>
+								</li>
+							</ul>
+-->
 
-      <div class="row">
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 
-        <!-- Blog Entries Column -->
-        <div class="col-md-8">
 
-          <h1 class="my-4">Historia
-            <small>1º Primaria A</small>
-          </h1>
+	<!-- Page Content -->
+	<div class="container">
 
-          <!-- Blog Post -->
-          <div class="card mb-4">
-            <img class="card-img-top" src="img/etapas.png" alt="Card image cap">
-            <div class="card-body">
-              <h2 class="card-title">Historia y la cronologia</h2>
-              <p class="card-text">En esta unidad aprenderemos la nocion del tiempo historico y sus variables: cronologia ,sucesion y simultaneidad,cambioycontinuidad,duracion,ritmo,intensidad y periodizacion </p>
-              <a href="#" class="btn btn-primary">Leer tema 1 &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-              Posted on January 1, 2018 by
-              <a href="#">Guillermo Navas</a>
-            </div>
-          </div>
+		<div class="row">
 
-          <!-- Blog Post -->
-          <div class="card mb-4">
-            <img class="card-img-top" src="img/edad-media.png" alt="Card image cap">
-            <div class="card-body">
-              <h2 class="card-title">La Edad Media</h2>
-              <p class="card-text">En este tema estudiaremos los fundamentos de la Edad Media: su historia, las estapas , caracteristicas principales y la estructura social del sistema feudal</p>
-              <a href="#" class="btn btn-primary">Leer tema 2 &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-              Posted on January 5, 2018 by
-              <a href="#">Ivan Perez</a>
-            </div>
-          </div>
+			<!-- Blog Entries Column -->
+			<div class="col-md-8">
 
-          <!-- Pagination -->
-          <ul class="pagination justify-content-center mb-4">
-            <li class="page-item">
-              <a class="page-link" href="#">&larr; Older</a>
-            </li>
-            <li class="page-item disabled">
-              <a class="page-link" href="#">Newer &rarr;</a>
-            </li>
-          </ul>
+				<h1 class="my-4">Historia
+					<small>1º Primaria A</small>
+				</h1>
 
-        </div>
+				<!-- Blog Post -->
+				<div class="card mb-4">
+					<img class="card-img-top" src="img/etapas.png" alt="Card image cap">
+					<div class="card-body">
+						<h2 class="card-title">Historia y la cronologia</h2>
+						<p class="card-text">En esta unidad aprenderemos la nocion del tiempo historico y sus variables: cronologia ,sucesion y simultaneidad,cambioycontinuidad,duracion,ritmo,intensidad y periodizacion </p>
+						<a href="Post.html" class="btn btn-primary">Leer tema 1 &rarr;</a>
+					</div>
+					<div class="card-footer text-muted">
+						Posted on January 1, 2018 by
+						<a href="#">Guillermo Navas</a>
+					</div>
+				</div>
 
-        <!-- Sidebar Widgets Column -->
-        <div class="col-md-4">
+				<!-- Blog Post -->
+				<div class="card mb-4">
+					<img class="card-img-top" src="img/edad-media.png" alt="Card image cap">
+					<div class="card-body">
+						<h2 class="card-title">La Edad Media</h2>
+						<p class="card-text">En este tema estudiaremos los fundamentos de la Edad Media: su historia, las estapas , caracteristicas principales y la estructura social del sistema feudal</p>
+						<a href="#" class="btn btn-primary">Leer tema 2 &rarr;</a>
+					</div>
+					<div class="card-footer text-muted">
+						Posted on January 5, 2018 by
+						<a href="#">Ivan Perez</a>
+					</div>
+				</div>
 
-          <!-- Search Widget -->
-          <div class="card my-4">
-            <h5 class="card-header">Buscar</h5>
-            <div class="card-body">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="¿Que quieres encontrar?...">
-                <span class="input-group-btn">
+				<!-- Pagination -->
+				<ul class="pagination justify-content-center mb-4">
+					<li class="page-item">
+						<a class="page-link" href="#">&larr; Older</a>
+					</li>
+					<li class="page-item disabled">
+						<a class="page-link" href="#">Newer &rarr;</a>
+					</li>
+				</ul>
+
+			</div>
+
+			<!-- Sidebar Widgets Column -->
+			<div class="col-md-4">
+
+				<!-- Search Widget -->
+				<div class="card my-4">
+					<h5 class="card-header">Buscar</h5>
+					<div class="card-body">
+						<div class="input-group">
+							<input type="text" class="form-control" placeholder="¿Que quieres encontrar?...">
+							<span class="input-group-btn">
                   <button class="btn btn-secondary" type="button">Go!</button>
                 </span>
-              </div>
-            </div>
-          </div>
+						</div>
+					</div>
+				</div>
 
-          <!-- Categories Widget -->
-          <div class="card my-4">
-            <h5 class="card-header">Temas</h5>
-            <div class="card-body">
-              <div class="row">
-                <div class="col-lg-6">
-                  <ul class="list-unstyled mb-0">
-                    <li>
-                     <FONT FACE='Cursiva'> <a href="#" >TEMA 1</a></FONT>
-                    </li>
-                    <li>
-						<FONT FACE='Cursiva'><a href="#">TEMA 2</a></FONT>
-                    </li>
-                    <li>
-						<FONT FACE='Cursiva'><a href="#">TEMA 3</a></FONT>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-lg-6">
-                  <ul class="list-unstyled mb-0">
-                    <li>
-                      <FONT FACE='Cursiva'> <a href="#" >TEMA 4</a></FONT>
-                    </li>
-                    <li>
-                      <FONT FACE='Cursiva'> <a href="#" >TEMA 5</a></FONT>
-                    </li>
-                    <li>
-                      <FONT FACE='Cursiva'> <a href="#" >TEMA 6</a></FONT>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
+				<!-- Categories Widget -->
+				<div class="card my-4">
+					<h5 class="card-header">Temas</h5>
+					<div class="card-body">
+						<div class="row">
+							<div class="col-lg-6">
+								<ul class="list-unstyled mb-0">
+									<li>
+										<FONT FACE='Cursiva'> <a href="#">TEMA 1</a></FONT>
+									</li>
+									<li>
+										<FONT FACE='Cursiva'><a href="#">TEMA 2</a></FONT>
+									</li>
+									<li>
+										<FONT FACE='Cursiva'><a href="#">TEMA 3</a></FONT>
+									</li>
+								</ul>
+							</div>
+							<div class="col-lg-6">
+								<ul class="list-unstyled mb-0">
+									<li>
+										<FONT FACE='Cursiva'> <a href="#">TEMA 4</a></FONT>
+									</li>
+									<li>
+										<FONT FACE='Cursiva'> <a href="#">TEMA 5</a></FONT>
+									</li>
+									<li>
+										<FONT FACE='Cursiva'> <a href="#">TEMA 6</a></FONT>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
 
-          <!-- Side Widget -->
-          <div class="card my-4">
-            <h5 class="card-header">Consejos</h5>
-            <div class="card-body">
-              Repasad, esforzaros y no olvideis divertidos mientras aprendeis
-            </div>
-          </div>
+				<!-- Side Widget -->
+				<div class="card my-4">
+					<h5 class="card-header">Consejos</h5>
+					<div class="card-body">
+						Repasad, esforzaros y no olvideis divertidos mientras aprendeis
+					</div>
+				</div>
 
-        </div>
+			</div>
 
-      </div>
-      <!-- /.row -->
+		</div>
+		<!-- /.row -->
 
-    </div>
-    <!-- /.container -->
+	</div>
+	<!-- /.container -->
 
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
-      </div>
-      <!-- /.container -->
-    </footer>
+	<!-- Footer -->
+	<footer class="py-5 bg-dark">
+		<div class="container">
+			<p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+		</div>
+		<!-- /.container -->
+	</footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<!-- Bootstrap core JavaScript -->
+	<script src="vendor/jquery/jquery.min.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  </body>
+</body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+<ul class="nav navbar-nav navbar-right">
+	<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Account
+                                        <b class="caret"></b></a>
+		<ul class="dropdown-menu">
+			<li>
+				<div class="navbar-content">
+					<div class="row">
+						<div class="col-md-5">
+							<img src="http://placehold.it/120x120" alt="Alternate Text" class="img-responsive" />
+							<p class="text-center small">
+								<a href="#">Change Photo</a></p>
+						</div>
+						<div class="col-md-7">
+							<span>Bhaumik Patel</span>
+							<p class="text-muted small">
+								mail@gmail.com</p>
+							<div class="divider">
+							</div>
+							<a href="#" class="btn btn-primary btn-sm active">View Profile</a>
+						</div>
+					</div>
+				</div>
+				<div class="navbar-footer">
+					<div class="navbar-footer-content">
+						<div class="row">
+							<div class="col-md-6">
+								<a href="#" class="btn btn-default btn-sm">Change Passowrd</a>
+							</div>
+							<div class="col-md-6">
+								<a href="http://www.jquery2dotnet.com" class="btn btn-default btn-sm pull-right">Sign Out</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</li>
+		</ul>
+	</li>
+</ul>
