--- a/IPOHTML/index.html
+++ b/IPOHTML/index.html
@@ -23,11 +23,11 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="#">
+			<a class="navbar-brand" href="index.html">
 				<img class="imgU" src="img/LogoU.png" height="40" width="50">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-			 aria-expanded="false" aria-label="Toggle navigation">
+			    aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
@@ -54,42 +54,6 @@
 							<strong>Usuario</strong>
 							<span class="glyphicon glyphicon-chevron-down"></span>
 						</a>
-
-						<!--
-							<ul class="dropdown-menu">
-								<li>
-									<div class="navbar-login">
-										<div class="row">
-											<div class="col-lg-4">
-												<p class="text-center">
-													<span class="glyphicon glyphicon-user icon-size"></span>
-												</p>
-											</div>
-											<div class="col-lg-8">
-												<p class="text-left"><strong>Nombre Apellido</strong></p>
-												<p class="text-left small">correoElectronico@email.com</p>
-												<p class="text-left">
-													<a href="#" class="btn btn-primary btn-block btn-sm">Actualizar Datos</a>
-												</p>
-											</div>
-										</div>
-									</div>
-								</li>
-								<li class="divider"></li>
-								<li>
-									<div class="navbar-login navbar-login-session">
-										<div class="row">
-											<div class="col-lg-12">
-												<p>
-													<a href="#" class="btn btn-danger btn-block">Cerrar Sesion</a>
-												</p>
-											</div>
-										</div>
-									</div>
-								</li>
-							</ul>
--->
-
 					</li>
 				</ul>
 			</div>
@@ -125,7 +89,7 @@
 				</div>
 
 				<!-- Blog Post -->
-				<div class="card mb-4" id="Tema2" >
+				<div class="card mb-4" id="Tema2">
 					<img class="card-img-top" src="img/edad-media.png" alt="Card image cap">
 					<div class="card-body">
 						<h2 class="card-title">La Edad Media</h2>
@@ -176,65 +140,65 @@
 					</div>
 				</div>
 
-			<!-- Categories Widget -->
-			<div class="card my-4">
-				<h5 class="card-header">Temas</h5>
-				<div class="card-body">
-					<div class="row">
-						<div class="col-lg-6">
-							<ul class="list-unstyled mb-0">
-								<li>
-									<FONT FACE='Cursiva'>
-										<a href="#Tema1">TEMA 1</a>
-									</FONT>
-								</li>
-								<li>
-									<FONT FACE='Cursiva'>
-										<a href="#Tema2">TEMA 2</a>
-									</FONT>
-								</li>
-								<li>
-									<FONT FACE='Cursiva'>
-										<a href="#">TEMA 3</a>
-									</FONT>
-								</li>
-							</ul>
-						</div>
-						<div class="col-lg-6">
-							<ul class="list-unstyled mb-0">
-								<li>
-									<FONT FACE='Cursiva'>
-										<a href="#">TEMA 4</a>
-									</FONT>
-								</li>
-								<li>
-									<FONT FACE='Cursiva'>
-										<a href="#">TEMA 5</a>
-									</FONT>
-								</li>
-								<li>
-									<FONT FACE='Cursiva'>
-										<a href="#">TEMA 6</a>
-									</FONT>
-								</li>
-							</ul>
+				<!-- Categories Widget -->
+				<div class="card my-4">
+					<h5 class="card-header">Temas</h5>
+					<div class="card-body">
+						<div class="row">
+							<div class="col-lg-6">
+								<ul class="list-unstyled mb-0">
+									<li>
+										<FONT FACE='Cursiva'>
+											<a href="#Tema1">TEMA 1</a>
+										</FONT>
+									</li>
+									<li>
+										<FONT FACE='Cursiva'>
+											<a href="#Tema2">TEMA 2</a>
+										</FONT>
+									</li>
+									<li>
+										<FONT FACE='Cursiva'>
+											<a href="#">TEMA 3</a>
+										</FONT>
+									</li>
+								</ul>
+							</div>
+							<div class="col-lg-6">
+								<ul class="list-unstyled mb-0">
+									<li>
+										<FONT FACE='Cursiva'>
+											<a href="#">TEMA 4</a>
+										</FONT>
+									</li>
+									<li>
+										<FONT FACE='Cursiva'>
+											<a href="#">TEMA 5</a>
+										</FONT>
+									</li>
+									<li>
+										<FONT FACE='Cursiva'>
+											<a href="#">TEMA 6</a>
+										</FONT>
+									</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
-			</div>
 
-			<!-- Side Widget -->
-			<div class="card my-4">
-				<h5 class="card-header">Consejos</h5>
-				<div class="card-body">
-					Repasad, esforzaros y no olvideis divertidos mientras aprendeis
+				<!-- Side Widget -->
+				<div class="card my-4">
+					<h5 class="card-header">Consejos</h5>
+					<div class="card-body">
+						Repasad, esforzaros y no olvideis divertidos mientras aprendeis
+					</div>
 				</div>
+
 			</div>
 
 		</div>
-
-	</div>
-	<!-- /.row -->
+		<!-- /.row -->
 
 	</div>
 	<!-- /.container -->
