--- a/IPOHTML/index.html
+++ b/IPOHTML/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Blog Home - Start Bootstrap Template</title>
+	<title>History X - IPO 2017/18</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,14 +27,13 @@
 				<img class="imgU" src="img/LogoU.png" height="40" width="50">
 			</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-			    aria-expanded="false" aria-label="Toggle navigation">
+			 aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item active">
-						<a class="nav-link" href="#">Inicio
-							<span class="sr-only">(current)</span>
+						<a class="nav-link" href="index.html">Inicio
 						</a>
 					</li>
 					<li class="nav-item">
