--- a/IPOHTML/index.html
+++ b/IPOHTML/index.html
@@ -41,10 +41,7 @@
 						<a class="nav-link" href="#">Juegos</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Asignaturas</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Contacto</a>
+						<a class="nav-link" href="contacto.html">Contacto</a>
 					</li>
 
 					<li class="nav-item">
