--- a/IPOHTML/login.html
+++ b/IPOHTML/login.html
@@ -36,10 +36,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="asignaturas.html">Asignaturas</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contactos.html">Contacto</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </li>
 
                     <li class="nav-item">
@@ -85,7 +82,7 @@
                                 </form>
                                 <div class="clearfix"></div>
                                 <p class="content-divider center mt-4">
-                                    <span>or</span>
+                                    <span>o</span>
                                 </p>
                             </div>
                             <p class="text-center">
