--- a/IPOHTML/index.html
+++ b/IPOHTML/index.html
@@ -76,7 +76,8 @@
 						<h2 class="card-title">Historia y la cronologia</h2>
 						<p class="card-text">En esta unidad aprenderemos la nocion del tiempo historico y sus variables: cronologia ,sucesion y simultaneidad,cambioycontinuidad,duracion,ritmo,intensidad
 							y periodizacion </p>
-						<a href="Post.html" class="btn btn-primary">Leer tema 1 &rarr;</a>
+						<a href="Post1.html" class="btn btn-primary">Leer tema 1 &rarr;</a>
+						<a href="test1.html" class="btn btn-primary">Evaluacion tema 1 &rarr;</a>
 					</div>
 					<div class="card-footer text-muted">
 						Posted on January 1, 2018 by
@@ -91,7 +92,8 @@
 						<h2 class="card-title">La Edad Media</h2>
 						<p class="card-text">En este tema estudiaremos los fundamentos de la Edad Media: su historia, las estapas , caracteristicas principales
 							y la estructura social del sistema feudal</p>
-						<a href="#" class="btn btn-primary">Leer tema 2 &rarr;</a>
+						<a href="Post2.html" class="btn btn-primary">Leer tema 2 &rarr;</a>
+						<a href="test2.html" class="btn btn-primary">Evaluacion tema 2 &rarr;</a>
 					</div>
 					<div class="card-footer text-muted">
 						Posted on January 5, 2018 by
