--- a/IPOHTML/Post2.html
+++ b/IPOHTML/Post2.html
@@ -63,23 +63,23 @@
 			<div class="col-lg-8" id="fondo">
 
 				<!-- Title -->
-				<h1 class="mt-4">Historia y su cronologia</h1>
+				<h1 class="mt-4">La Edad Media</h1>
 
 				<!-- Author -->
 				<p class="lead">
 					by
-					<a href="#">Guillermo Navas</a>
+					<a href="#">Ivan Perez</a>
 				</p>
 
 				<hr>
 
 				<!-- Date/Time -->
-				<p>Posted on January 1, 2018 at 12:00 PM</p>
+				<p>Posted on January 5, 2018 at 12:00 PM</p>
 
 				<hr>
 
 				<!-- Preview Image -->
-				<img class="img-fluid rounded" src="img/etapas.png" alt="">
+				<img class="img-fluid rounded" src="img/edad-media.png" alt="">
 
 				<hr>
 
