--- a/IPOHTML/index.html
+++ b/IPOHTML/index.html
@@ -37,7 +37,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Juegos</a>
+						<a class="nav-link" href="juegos.html">Juegos</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contacto.html">Contacto</a>
