--- a/IPOHTML/index.html
+++ b/IPOHTML/index.html
@@ -80,7 +80,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Juegos</a>
+						<a class="nav-link" href="juegos.html">Juegos</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="contacto.html">Contacto</a>
@@ -109,7 +109,8 @@
 					<div class="card-body">
 						<h2 class="card-title">Historia y la cronologia</h2>
 						<p class="card-text">En esta unidad aprenderemos la nocion del tiempo historico y sus variables: cronologia ,sucesion y simultaneidad,cambioycontinuidad,duracion,ritmo,intensidad y periodizacion </p>
-						<a href="Post.html" class="btn btn-primary">Leer tema 1 &rarr;</a>
+						<a href="Post1.html" class="btn btn-primary">Leer tema 1 &rarr;</a>
+                        <a href="test1.html" class="btn btn-primary">Hacer test tema 1  &rarr;</a>
 					</div>
 					<div class="card-footer text-muted">
 						Posted on January 1, 2018 by
@@ -123,7 +124,8 @@
 					<div class="card-body">
 						<h2 class="card-title">La Edad Media</h2>
 						<p class="card-text">En este tema estudiaremos los fundamentos de la Edad Media: su historia, las estapas , caracteristicas principales y la estructura social del sistema feudal</p>
-						<a href="#" class="btn btn-primary">Leer tema 2 &rarr;</a>
+						<a href="Post2.html" class="btn btn-primary">Leer tema 2 &rarr;</a>
+                        <a href="test2.html" class="btn btn-primary">Hacer test tema2 &rarr;</a>
 					</div>
 					<div class="card-footer text-muted">
 						Posted on January 5, 2018 by
