--- a/IPOHTML/test1.html
+++ b/IPOHTML/test1.html
@@ -12,6 +12,7 @@
 
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min1.css" rel="stylesheet">
+	<link href="css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Custom styles for this template -->
 	<link href="css/blog-post.css" rel="stylesheet">
@@ -184,7 +185,7 @@
 					<p> </p>
 				</form>
 				<form name="boton">
-					<input type="button" name="boton" value=" CORREGIR " onclick="corregir()" />
+					<input type="button" name="boton" class="btn btn-primary" value=" CORREGIR " onclick="corregir()" />
 				</form>
 				<br>
 				<br>
@@ -214,7 +215,7 @@
 	<!-- Footer -->
 	<footer class="py-5 bg-dark">
 		<div class="container">
-			<p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+			<p class="m-0 text-center text-white">Copyright &copy; </p>
 		</div>
 		<!-- /.container -->
 	</footer>
