Revert "Minor changed"
This reverts commit 5e764ddf3281932d252085594633e75e64f80c8d.

--- a/IPOHTML/test1.html
+++ b/IPOHTML/test1.html
@@ -12,7 +12,6 @@
 
 	<!-- Bootstrap core CSS -->
 	<link href="vendor/bootstrap/css/bootstrap.min1.css" rel="stylesheet">
-	<link href="css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Custom styles for this template -->
 	<link href="css/blog-post.css" rel="stylesheet">
@@ -185,7 +184,7 @@
 					<p> </p>
 				</form>
 				<form name="boton">
-					<input type="button" name="boton" class="btn btn-primary" value=" CORREGIR " onclick="corregir()" />
+					<input type="button" name="boton" value=" CORREGIR " onclick="corregir()" />
 				</form>
 				<br>
 				<br>
@@ -215,7 +214,7 @@
 	<!-- Footer -->
 	<footer class="py-5 bg-dark">
 		<div class="container">
-			<p class="m-0 text-center text-white">Copyright &copy; </p>
+			<p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
 		</div>
 		<!-- /.container -->
 	</footer>
