--- a/IPOHTML/contacto.html
+++ b/IPOHTML/contacto.html
@@ -6,9 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--===============================================================================================-->
-
-	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-
+	
 	<link rel="stylesheet" type="text/css" href="css/contacto.css">
 
 </head>
@@ -22,7 +20,7 @@
 			</div>
 
 			<form class="contact1-form validate-form">
-				<span class="contact1-form-title" style="font-family: 'Lobster', serif;" >
+				<span class="contact1-form-title">
 					Contacta con nosotros
 				</span>
 
