--- a/IPOHTML/Post2.html
+++ b/IPOHTML/Post2.html
@@ -11,43 +11,78 @@
 	<title>Blog Post - Start Bootstrap Template</title>
 
 	<!-- Bootstrap core CSS -->
-	<link href="vendor/bootstrap/css/bootstrap.min1.css" rel="stylesheet">
+	<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 	<!-- Custom styles for this template -->
 	<link href="css/blog-post.css" rel="stylesheet">
 	<link href="js/ramdon.js" rel="stylesheet">
+<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/solid.js" integrity="sha384-+Ga2s7YBbhOD6nie0DzrZpJes+b2K1xkpKxTFFcx59QmVPaSA8c7pycsNaFwUK6l" crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/regular.js" integrity="sha384-t7yHmUlwFrLxHXNLstawVRBMeSLcXTbQ5hsd0ifzwGtN7ZF7RZ8ppM7Ldinuoiif" crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js" integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19" crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
-
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="index.html"><img class="imgU" src="img/LogoU.png" height="40" width="50"></a>
+			<a class="navbar-brand" href="index.html">
+				<i class="fas fa-arrow-circle-left fa-2x" ></i>
+			</a>
+			<img src="img/history.png" border="5" width="100" height="50">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+				<span class="navbar-toggler-icon"></span>
+			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item active">
-						<a class="nav-link" href="index.html">Inicio
-                <span class="sr-only">(current)</span>
-              </a>
+					<li class="nav-item">
+							<li class="dropdown">
+								<a href="#" class="nav-link" data-toggle="dropdown"><i id="icon" class="fas fa-address-card"></i>Usuario</a>
+								
+								<ul class="dropdown-menu">
+									<li>
+										<div class="navbar-content">
+											<div class="row">
+												<div class="col-md-5">
+													<img src="http://placehold.it/120x120" alt="Alternate Text" class="img-responsive" />
+													<p class="text-center small">
+														<a href="#">Change Photo</a>
+													</p>
+												</div>
+												<div class="col-md-7">
+													<span>Bhaumik Patel</span>
+													<p class="text-muted small">
+														mail@gmail.com</p>
+													<div class="divider">
+													</div>
+													<a href="#" class="btn btn-primary btn-sm active">View Profile</a>
+												</div>
+											</div>
+										</div>
+										<div class="navbar-footer">
+											<div class="navbar-footer-content">
+												<div class="row">
+													<div class="col-md-6">
+														<a href="#" class="btn btn-default btn-sm">Change Passowrd</a>
+													</div>
+													<div class="col-md-6">
+														<a href="http://www.jquery2dotnet.com" class="btn btn-default btn-sm pull-right">Sign Out</a>
+													</div>
+												</div>
+											</div>
+										</div>
+									</li>
+								</ul>
+							</li>
+					<li class="nav-item">
+						<a href="index.html" class="nav-link"><i id="icon" class="fas fa-home"></i> Inicio</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Juegos</a>
+						<a class="nav-link" href="juegos.html"><i id="icon"class="fas fa-gamepad"></i>Juegos</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="contacto.html">Contacto</a>
-					</li>
-					<li class="nav-item">
-
-						<a href="#" class="nav-link" data-toggle="dropdown">
-                        <span class="glyphicon glyphicon-user"></span> 
-							<strong>Usuario</strong>
-                        <span class="glyphicon glyphicon-chevron-down"></span>
-                    	</a>
+						<a class="nav-link" href="contacto.html"><i id="icon" class="fas fa-envelope"></i>Contacto</a>
 					</li>
 				</ul>
 			</div>
