--- a/IPOHTML/contacto.html
+++ b/IPOHTML/contacto.html
@@ -53,10 +53,9 @@
 
 					<button class="contact1-form-btn">
 						<a href="index.html" id="btnEnviar" style="text-decoration:none;">
-							Cancelar
+							Inicio
 						</a>
 					</button>
-
 				</div>
 			</form>
 		</div>
